--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
             <div id="familyList" class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Family cards will be injected here by JS -->
             </div>
-            <div id="instrumentDetailModal" class="fixed inset-0 hidden z-50 modal">
-                <div class="modal-content p-8 max-w-lg w-full text-center">
+            <!-- MODAL CORRECTION: Added p-4 for safe margin and max-h-[90vh] overflow-y-auto for scrollability -->
+            <div id="instrumentDetailModal" class="fixed inset-0 hidden z-50 modal p-4">
+                <div class="modal-content p-8 max-w-lg w-full text-center max-h-[90vh] overflow-y-auto">
                     <h3 id="detailFamilyName" class="text-3xl font-bold text-gray-800 mb-4"></h3>
                     <p id="detailFamilyDescription" class="text-gray-700 mb-6"></p>
                     <h4 class="text-2xl font-semibold text-gray-700 mb-4">Ejemplos de Instrumentos:</h4>
